@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2006)
   - Fixed the following bug reports on SourceForge:
+      1491491: reload_remotes.php doesn't display any error message
       1489354: installation wizard doesn't work after 'step3'
       1490179: Error after upgrading to latest CVS 1.1
       1491406: using 'Not yet registered? Register here!' cause an error
